# pcsc

./: CMakeLists.txt
cmake/modules/: FindPCSCLite.cmake
include/: pcsc.hpp
src/: pcsc.cpp
